# zephyr

./: CMakeLists.txt  Kconfig.zephyr
arch/: CMakeLists.txt
arch/x86/: CMakeLists.txt
boards/arm/nrf52840_pca10056/: nrf52840_pca10056.dts
boards/arm/nrf9160_pca10090/: nrf9160_pca10090.dts
boards/arm/nrf9160_pca10090/doc/: nrf9160_pca10090.rst
cmake/: extensions.cmake  kconfig.cmake  zephyr_module.cmake
cmake/app/: boilerplate.cmake
cmake/compiler/clang/: target.cmake
cmake/compiler/gcc/: target.cmake
drivers/clock_control/: nrf_power_clock.c
drivers/entropy/: entropy_nrf5.c
drivers/flash/: soc_flash_nrf.c
dts/bindings/timer/: nordic,nrf-timer.yaml
ext/hal/cmsis/Include/: cmsis_gcc.h
ext/hal/nordic/: CMakeLists.txt
ext/lib/encoding/tinycbor/: CMakeLists.txt
include/arch/arm/cortex_m/mpu/: arm_mpu_v7m.h  nxp_mpu.h
include/arch/arm/cortex_m/scripts/: linker.ld
include/net/: net_ip.h
lib/: CMakeLists.txt
samples/hello_world/: prj.conf
scripts/: partition_manager.py  sanitycheck
scripts/dts/extract/: flash.py
soc/arm/nordic_nrf/nrf91/: CMakeLists.txt  dts_fixup.h
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/controller/: CMakeLists.txt
subsys/boot/: CMakeLists.txt  Kconfig
subsys/boot/mcuboot/: CMakeLists.txt  Kconfig
subsys/fs/: Kconfig  pm.yml
subsys/storage/flash_map/: flash_map_default.c
